# proxycache

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  app.py  config.py  hashing.py  llama_client.py  otel.py  pyproject.toml  requirements.txt  slot_manager.py  version.py
.github/: dependabot.yml
.github/workflows/: ci.yml  container-release.yml  pr-title.yml  release.yml
docker/real-smoke-llama-swap/: Dockerfile  config.yaml  run-model.sh
docs/: coding-standards.md  contributing.md  release-process.md  test-plan.md
docs/grafana/: proxycache-otel-traces-dashboard.json
proxycache.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/proxycache/: __init__.py  __main__.py  config.py  main.py
src/proxycache/api/: __init__.py  app.py
src/proxycache/cache/: __init__.py  metadata.py
src/proxycache/clients/: __init__.py  llama.py
src/proxycache/observability/: __init__.py  otel.py
src/proxycache/services/: __init__.py  cache_lifecycle.py  chat_service.py  policies.py  slots.py  streaming.py
tests/: conftest.py  test_multimodal_passthrough.py  test_retention.py  test_settings.py
tests/integration/: test_app_factory.py  test_chat_flow.py  test_passthrough.py
tests/real_smoke/: opencode_sdk_smoke.mjs  test_live_proxy_cache.py  test_opencode_sdk_smoke.py
tests/smoke/: test_smoke.py
tests/unit/: test_cache_lifecycle.py  test_chat_service.py  test_chat_service_errors.py  test_config.py  test_entrypoints.py  test_llama_client.py  test_metadata.py  test_otel.py  test_policies.py  test_slots.py  test_streaming.py
