[project]
name = "proxycache"
version = "0.1.0"
description = "KV cache proxy for llama.cpp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
