[project]
name = "proxycache"
version = "1.0.1"
description = "KV cache proxy for llama.cpp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.0",
    "bandit>=1.8.6",
    "commitizen>=4.13.9",
    "pre-commit>=4.5.1",
    "python-semantic-release>=10.5.3",
]

[project.scripts]
proxycache = "proxycache.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP009"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.semantic_release]
tag_format = "v{version}"
commit_parser = "conventional"
commit_message = "chore(release): {version} [skip ci]"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "^main$"
prerelease = false

[tool.semantic_release.branches.develop]
match = "^develop$"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = ["^chore\\(release\\):"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = false
